Fixing spacing

--- a/src/app/Styles/Panels.module.css
+++ b/src/app/Styles/Panels.module.css
@@ -7,5 +7,5 @@
 .panel {
     border: 1px solid black;
     border-radius: 5px;
-    height: 80%;
+    /* height: 80%; */
 }
